<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/hp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_text_here" />

    <Button
        android:id="@+id/hp_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add"
        android:textSize="20sp" />
    <Button
        android:id="@+id/hp_delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/delete" />

    <ListView
        android:id="@+id/hp_listview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:id="@+id/data_access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remote_data"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>